# VisaulNovel-editor

./: .gitignore  CMakeLists.txt  README.md
include/: Application.h  CharacterPresetManager.h  Editor.h  EditorDialogs.h  EditorPanels.h  Scene.h  SceneManager.h  ScenePreview.h
src/: Application.cpp  CharacterPresetManager.cpp  Editor.cpp  EditorDialogs.cpp  EditorPanels.cpp  Scene.cpp  SceneManager.cpp  ScenePreview.cpp  main.cpp
